import { LogicBehavior } from "@core/LogicBehavior.ts";

export class PhysicsBehavior<T> extends LogicBehavior<T> {
  // protected physics!: PhysicsGameEngineComponent;
}
